# Fraudulent-Transaction-Detection

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml  new_deploy_hf.yml
api/: api.py
artifacts/: baseline_stats.json  model.joblib  threshold.json
mlruns/1/models/m-ce40e6888f4b405baf03638b75f6356d/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-f55c2a8f8ffe43379ad3375571da78aa/artifacts/: MLmodel  conda.yaml  model.pkl
monitoring/: prometheus.yml
scripts/: baseline_builder.py  metrics_proxy.py  simulate_requests.py
src/: dataset_download.py  inference.py  serialize.py  train.py  trainTab.py  train_CICD.py  train_tabnet.py  train_xgb.py
tests/: inference_test.py
